tests/ui/multiple-args.stderr
error: Options must have only one argument
  --> $DIR/multiple-args.rs:11:5
   |
11 |     #[opt = 'c']
   |     ^
